-
Bug
-
Resolution: Done
-
P1: Critical
-
6.2
-
None
-
5bd16f132dcc4d16d7ba7e91ffba92ff005b91e4 (qt/qtbase/dev)
A recent clean-up of our double-conversion third-party code breaks building with system double-conversion libraries, which presume a #include <double-conversion/double-conversion.h> where the linked change removes the directory-layer from that path.
The upstream sources use #include "name.h" with no path component for their mutual inclusions, so building them requires an include path that has their directory in it; but for our code to include the export header as above, we need to give the compiler an include path with the last path-component omitted, so that the source can supply that last component.
Hopefully CMake can support using different include paths for different source files.
| For Gerrit Dashboard: QTBUG-90961 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 333349,3 | Fix compilation with system double-conversion | dev | qt/qtbase | Status: MERGED | +2 | 0 |